wp_etcd.yml
apiVersion: v1
kind: Pod
metadata:
  name: etcd0
  labels:
    app: wordpress
    etcdnode: etcd0
spec:
  containers:
  - command:
    - /usr/local/bin/etcd
    - --name
    - etcd0
    - --initial-advertise-peer-urls
    - http://etcd0:2380
    - --listen-client-urls
    - http://0.0.0.0:2379
    - --advertise-client-urls
    - http://etcd0:2379
    - --initial-cluster
    - etcd0=http://etcd0:2380,etcd1=http://etcd1:2380,etcd2=http://etcd2:2380
    - --initial-cluster-state
    - new
    image: quay.io/coreos/etcd:latest
    name: etcd0
    ports:
    - containerPort: 2379
      name: client
      protocol: TCP
    - containerPort: 2380
      name: server
      protocol: TCP
    - containerPort: 4001
      protocol: TCP
    - containerPort: 7001
      protocol: TCP
  restartPolicy: Never
  nodeSelector:
    name: node-k81
---
apiVersion: v1
kind: Pod
metadata:
  name: etcd1
  labels:
    app: wordpress
    etcdnode: etcd1
spec:
  containers:
  - command:
    - /usr/local/bin/etcd
    - --name
    - etcd1
    - --initial-advertise-peer-urls
    - http://etcd1:2380
    - --listen-client-urls
    - http://0.0.0.0:2379
    - --advertise-client-urls
    - http://etcd1:2379
    - --initial-cluster
    - etcd0=http://etcd0:2380,etcd1=http://etcd1:2380,etcd2=http://etcd2:2380
    - --initial-cluster-state
    - new
    image: quay.io/coreos/etcd:latest
    name: etcd1
    ports:
    - containerPort: 2379
      name: client
      protocol: TCP
    - containerPort: 2380
      name: server
      protocol: TCP
    - containerPort: 4001
      protocol: TCP
    - containerPort: 7001
      protocol: TCP
  restartPolicy: Never
  nodeSelector:
    name: node-k82
---
apiVersion: v1
kind: Pod
metadata:
  name: etcd2
  labels:
    app: wordpress
    etcdnode: etcd2
spec:
  containers:
  - command:
    - /usr/local/bin/etcd
    - --name
    - etcd2
    - --initial-advertise-peer-urls
    - http://etcd2:2380
    - --listen-client-urls
    - http://0.0.0.0:2379
    - --advertise-client-urls
    - http://etcd2:2379
    - --initial-cluster
    - etcd0=http://etcd0:2380,etcd1=http://etcd1:2380,etcd2=http://etcd2:2380
    - --initial-cluster-state
    - new
    image: quay.io/coreos/etcd:latest
    name: etcd2
    ports:
    - containerPort: 2379
      name: client
      protocol: TCP
    - containerPort: 2380
      name: server
      protocol: TCP
    - containerPort: 4001
      protocol: TCP
    - containerPort: 7001
      protocol: TCP
  restartPolicy: Never
  nodeSelector:
    name: node-k83
