wp_wordpress.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  ports: 
    - port: 80 
      protocol: TCP
      targetPort: 80
      name: server
  selector:
    app: wordpress
