wp_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: wordpress.salvador.org
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name : wordpress
              port: 
                number: 80
